# open-export

./: .gitignore  LICENSE  README.md  pyproject.toml
src/open_export/: __init__.py  browser.py  cli.py  exporter.py  scraper.py
tests/: test_exporter.py
