[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-export"
version = "0.1.0"
description = "Archive and export your AI chat conversations as JSON and Markdown."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
open-export = "open_export.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/open_export"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
