[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-export"
version = "0.1.4"
description = "Archive and export your AI chat conversations as JSON and Markdown."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/Prodoorknob/open-export"
Repository = "https://github.com/Prodoorknob/open-export"
Issues = "https://github.com/Prodoorknob/open-export/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
open-export = "open_export.cli:main"

[tool.hatch.build.targets.sdist]
core-metadata-version = "2.3"

[tool.hatch.build.targets.wheel]
core-metadata-version = "2.3"
packages = ["src/open_export"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
